--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,9 +28,10 @@ steps:
   inputs:
     restoreSolution: '$(Parameters.solution)'
 
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
 - task: AzureRmWebAppDeployment@4
   displayName: 'Azure App Service Deploy: trgdevopsyApp'
   inputs:
