--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -34,9 +34,10 @@ steps:
     command: 'build'
 
 - task: PublishBuildArtifacts@1
+  displayName: 'Publish Artifact: drop'
   inputs:
-    pathToPublish: '$(Build.ArtifactStagingDirectory)'
-    artifactName: drop
+    PathtoPublish: '$(build.artifactstagingdirectory)'
+  condition: succeededOrFailed()
 
 - task: AzureRmWebAppDeployment@4
   displayName: 'Azure App Service Deploy: trgdevopsyApp'
