--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -28,24 +28,19 @@ steps:
   inputs:
     restoreSolution: '$(Parameters.solution)'
 
-
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'build'
+    command: 'publish'
+    publishWebProjects: true
+    workingDirectory: '$(build.artifactstagingdirectory)'
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
-  inputs:
-    PathtoPublish: '$(build.artifactstagingdirectory)'
-  condition: succeededOrFailed()
-
-#####automat
-- task: CopyFiles@2
-  displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
-  inputs:
-    SourceFolder: '$(build.artifactstagingdirectory)'
-    Contents: '**'
-    TargetFolder: '$(build.artifactstagingdirectory)'
+# #####automat
+# - task: CopyFiles@2
+#   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
+#   inputs:
+#     SourceFolder: '$(build.artifactstagingdirectory)'
+#     Contents: '**'
+#     TargetFolder: '$(build.artifactstagingdirectory)'
 
 - task: AzureRmWebAppDeployment@4
   displayName: 'Azure App Service Deploy: trgdevopsyApp'
