--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
 
   - task: NodeTool@0
     inputs:
-      versionSpec: ">= 6.10"
+      versionSpec: "v10.19.0"
 
   - task: Npm@1
     displayName: "Run npm install"
