--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,9 +19,9 @@ steps:
       packageType: sdk
       version: "5.x"
 
-  - task: NodeTool@0
-    inputs:
-      versionSpec: ">=16.14"
+  # - task: NodeTool@0
+  #   inputs:
+  #     versionSpec: ">=16.14"
 
   - script: npm install
     displayName: "Run npm install manually"
