--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,17 +7,21 @@ trigger:
   - "*"
 
 pool:
-  name: "Default"
+  vmImage: "ubuntu-20.04"
+  demands:
+    - npm
 
 variables:
   buildConfiguration: "Release"
+  wwwroootDir: "Tailspin.SpaceGame.Web/wwwroot"
+  dotnetSdkVersion: "5.x"
 
 steps:
   - task: UseDotNet@2
-    displayName: "Use .NET SDK 5.x"
+    displayName: "Use .NET SDK $(dotnedSdkVersion)"
     inputs:
       packageType: sdk
-      version: "5.x"
+      version: "$(dotnetSdkVersion)"
 
   - task: NodeTool@0
     inputs:
@@ -29,15 +33,15 @@ steps:
       command: "install"
       verbose: false
 
-  - script: "./node_modules/.bin/node-sass Tailspin.SpaceGame.Web/wwwroot --output Tailspin.SpaceGame.Web/wwwroot"
+  - script: "./node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)"
     displayName: "Compile Sass assets"
 
-  # - task: gulp@1
-  #   displayName: "Run gulp tasks"
+  - task: gulp@1
+    displayName: "Run gulp tasks"
 
   - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
     displayName: "Save build info"
-    workingDirectory: Tailspin.SpaceGame.Web/wwwroot
+    workingDirectory: $(wwwrootDir)
 
   - task: DotNetCoreCLI@2
     displayName: "Restore project dpendencies"
@@ -46,18 +50,19 @@ steps:
       projects: "**/*.csproj"
 
   - task: DotNetCoreCLI@2
-    displayName: "Build - Release"
+    displayName: "Build project - $(buildConfiguration)"
     inputs:
       command: "build"
-      arguments: "--no-restore --configuration Release"
+      arguments: "--no-restore --configuration $(buildConfiguration)"
       projects: "**/*.csproj"
+
   - task: DotNetCoreCLI@2
-    displayName: "Publish the project - Release"
+    displayName: "Publish the project - $(buildConfiguration)"
     inputs:
       command: "publish"
       projects: "**/*.csproj"
       publishWebProjects: false
-      arguments: "--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release"
+      arguments: "--no-build --configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)/$(buildConfiguration)"
       zipAfterPublish: true
 
   - task: PublishBuildArtifacts@1
