--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ pool:
 
 variables:
   buildConfiguration: "Release"
-  wwwroootDir: "Tailspin.SpaceGame.Web/wwwroot"
+  wwwrootDir: "Tailspin.SpaceGame.Web/wwwroot"
   dotnetSdkVersion: "5.x"
 
 steps:
