--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,8 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-  - "*"
+  - main
+  - build-pipeline
 
 pool:
   vmImage: "ubuntu-20.04"
